
 - TODO : trying to find a solution with SCP and some special linux file (with unknown file size)
 - TODO : manage when sftp submodule is not available => throw the right exception
 - TODO : ChannelExec use of virtual tty must be configurable, as without performance are quite better
 - TODO : remove all println, use scalalogging...
  
 - AIX sha1sum & md5sum fix.
 - new commands :
   + env
 - new test cases 

------------------------------------------------------------------
0.9.7 (2013-02-10)

 - scala >=2.10 is now mandatory
 - ChannelExec now is using a virtual tty by default
 - new commands : 
   + fsFreeSpace
   + fileRights
   + du
 - minor updates for darwin (mac os x) support
 - ps() command enhancements 
   + OS process modeling => LinuxProcess, AIXProcess, SunOSProcess, DarwinProcess
   + LinuxProcessState, DarwinProcessState
   + ps test case added
 - logging support added (using scala-logging)

------------------------------------------------------------------
0.9.6 (2013-01-07)

 - scala 2.10.0 support added

------------------------------------------------------------------
0.9.5-b3 (2012-11-26)

 - general transfert methods (available in SSH class) are now using automatic fallback, if SCP fails, then SFTP will be tryied.

------------------------------------------------------------------
0.9.5-b2 (2012-11-05)
 - JSCH updated to 0.1.49
 - now using sbt 0.12.1
 - now using scalatest 2.0-M5
 - now using sbteclipse 2.1.0
 - now using sbt assembly 0.8.5
 - add support for scala 2.10.0-RC2
 - rexec.scala example script added 
 - Issue 1 Fixed: ssh keys reported by jendap
   SSHOptions new parameter : sshKeyFile: Option[String]=None, // if None, will look for default names. (sshUserDir is used)
 - new helper methods : 
   => ps : to get the list of running processes
   => cat file : to get the content of a file through the cat command.
      Useful when trying to get special linux file content 